# makefile.uv

./: .gitignore  LICENSE  Makefile.uv  README.md
.github/workflows/: test.yml
examples/basic/: Makefile  pyproject.toml
examples/basic/tests/: test_demo.py
examples/with-groups/: Makefile  pyproject.toml
examples/with-groups/src/demo/: __init__.py
examples/with-matrix/: Makefile  pyproject.toml
examples/with-matrix/tests/: test_demo.py
tests/: smoke.sh
